Added the check for software updates in the main application

--- a/Tangra 3/Properties/Settings.settings
+++ b/Tangra 3/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="TangraRecentFiles" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LastCheckedForUpdates" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">2000-01-01</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
