--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -13,6 +13,9 @@
             <setting name="TangraRecentFiles" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastCheckedForUpdates" serializeAs="String">
+                <value>2000-01-01</value>
+            </setting>
         </Tangra.Properties.Settings>
     </userSettings>
     <system.serviceModel>
