Fixed a number of incorrectly set default choices for Background Method. Managing the new version upgrade in a Windows version.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Helpers\FITSHelper.cs" />
     <Compile Include="Helpers\NotificationManager.cs" />
     <Compile Include="Helpers\TangraEnvironment.cs" />
+    <Compile Include="Helpers\ZipUnzip.cs" />
     <Compile Include="ImageTools\ArrowTool.cs" />
     <Compile Include="ImageTools\CorrectTrackingTool.cs" />
     <Compile Include="OCR\ITimestampOcr.cs" />
