First cut of the OccultTool's AOTA Add-in.

--- a/Tangra 3/Properties/Settings.settings
+++ b/Tangra 3/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="LastCheckedForUpdates" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">2000-01-01</Value>
     </Setting>
+    <Setting Name="ApplicationVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AddinSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
