--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -16,6 +16,12 @@
             <setting name="LastCheckedForUpdates" serializeAs="String">
                 <value>2000-01-01</value>
             </setting>
+            <setting name="ApplicationVersion" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AddinSettings" serializeAs="String">
+                <value />
+            </setting>
         </Tangra.Properties.Settings>
     </userSettings>
     <system.serviceModel>
