--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ _ReSharper.*
 /Tangra.SDK/bin
 
 /AutoUpdate/SelfUpdate/AutoUpdateSelfUpdate.exe
+/Test Data
+/AutoUpdate/SelfUpdate/AutoUpdateSelfUpdate.bin
