Added Remoting Tracing, fixed all remaining remoting lifecycle object issues. A few fixes and improvements to the AOTA addin.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Addins\Addin.cs" />
     <Compile Include="Addins\AddinManager.cs" />
+    <Compile Include="Addins\AddinTrackingHandler.cs" />
     <Compile Include="Addins\frmConfirmIntegrationRate.cs">
       <SubType>Form</SubType>
     </Compile>
