Defined interfaces for the Trackers and now the interfaces are used by Tangra. Now ready to build a new tracker from scratch without braking anything.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -356,6 +356,7 @@
     <Compile Include="VideoOperations\LightCurves\LightCurveReductionContext.cs" />
     <Compile Include="VideoOperations\LightCurves\Measurements\GroupMeasurer.cs" />
     <Compile Include="VideoOperations\LightCurves\ReduceLightCurveOperation.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\ITracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OccultationTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OneStarTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\TrackedObject.cs" />
