--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -356,11 +356,13 @@
     <Compile Include="VideoOperations\LightCurves\LightCurveReductionContext.cs" />
     <Compile Include="VideoOperations\LightCurves\Measurements\GroupMeasurer.cs" />
     <Compile Include="VideoOperations\LightCurves\ReduceLightCurveOperation.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\AdHocTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\ITracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OccultationTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OneStarTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\TrackedObject.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\TrackedObjectConfig.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\TrackedObjectLight.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\Tracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\TrackerFactory.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\UntrackedTracker.cs" />
