More work on the SimplifiedTracker. Begun moving the tracker to native land. Abstracted the PSF fits as used by the light curve measurement defining an ITrackedObjectPsfFit interface. Made the painting of a PSF static.

--- a/Tangra.Core/TangraCore_Win32.project
+++ b/Tangra.Core/TangraCore_Win32.project
@@ -23,6 +23,7 @@
     <File Name="psf_fit.cpp"/>
     <File Name="safe_matrix.cpp"/>
     <File Name="Tangra.Math.cpp"/>
+    <File Name="simplified_tracker.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
     <File Name="adv_file.h"/>
@@ -43,6 +44,7 @@
     <File Name="psf_fit.h"/>
     <File Name="safe_matrix.h"/>
     <File Name="Tangra.Math.h"/>
+    <File Name="simplified_tracker.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
