--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -231,6 +231,7 @@
     <Compile Include="ImageTools\ArrowTool.cs" />
     <Compile Include="ImageTools\CorrectTrackingTool.cs" />
     <Compile Include="OCR\ITimestampOcr.cs" />
+    <Compile Include="PInvoke\NativeTracking.cs" />
     <Compile Include="PInvoke\TangraCore.cs" />
     <Compile Include="PInvoke\TangraVideo.cs" />
     <Compile Include="Program.cs" />
@@ -360,6 +361,7 @@
     <Compile Include="VideoOperations\LightCurves\Tracking\BaseTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\FailedDistanceLogger.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\ITracker.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\NativeSimplifiedTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OccultationTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OneStarTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\SimplifiedTracker.cs" />
