--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -362,6 +362,7 @@
     <Compile Include="VideoOperations\LightCurves\Tracking\FailedDistanceLogger.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\ITracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\NativeSimplifiedTracker.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\NativeTrackedObject.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OccultationTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OneStarTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\SimplifiedTracker.cs" />
