Updated .gitignore. Added the new CodeLight 5.3 code db subdirectories to the ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ _ReSharper.*
 /Tangra.Core/.build-debug
 /Tangra.Core/.build-release
 /Tangra.Core/.clang
+/Tangra.Core/.codelite
 /Tangra.Core/Debug
 /Tangra.Core/Makefile
 
