--- a/OcrTester/OcrTester.csproj
+++ b/OcrTester/OcrTester.csproj
@@ -44,13 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="OsdProcessor.cs" />
+    <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrCalibratingState.cs" />
+    <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrState.cs" />
+    <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMain.resx">
