Fixed the broken (due to merging) checks for 8,6,9,3. Implemented the image preprocessing in Native land. Added another OCR automated test case

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ _ReSharper.*
 /AutoUpdate/SelfUpdate/AutoUpdateSelfUpdate.bin
 
 /TestFiles/
+
+/Tangra.Core/cppcheck.list
+/Tangra.Core/cscope_file.list
