--- a/Tangra.Core/TangraCore_Win32.project
+++ b/Tangra.Core/TangraCore_Win32.project
@@ -24,6 +24,7 @@
     <File Name="safe_matrix.cpp"/>
     <File Name="Tangra.Math.cpp"/>
     <File Name="simplified_tracker.cpp"/>
+    <File Name="Tangra.Image.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
     <File Name="adv_file.h"/>
@@ -45,6 +46,7 @@
     <File Name="safe_matrix.h"/>
     <File Name="Tangra.Math.h"/>
     <File Name="simplified_tracker.h"/>
+    <File Name="Tangra.Image.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
