More work on the AOTA add-in. First cut of the C# code to remove large chunks of noise from OCRed images.

--- a/Tangra.OCR/Tangra.OCR.csproj
+++ b/Tangra.OCR/Tangra.OCR.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrProcessor.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrState.cs" />
     <Compile Include="ITimestampOcr.cs" />
+    <Compile Include="LargeChunkDenoiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TangraCore.cs" />
   </ItemGroup>
