Updates to the AOTA add-in to save even times for further user, minor UI updates in preparation for a release.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -387,6 +387,7 @@
     <Compile Include="VideoOperations\LightCurves\LightCurveReductionContext.cs" />
     <Compile Include="VideoOperations\LightCurves\Measurements\GroupMeasurer.cs" />
     <Compile Include="VideoOperations\LightCurves\ReduceLightCurveOperation.cs" />
+    <Compile Include="VideoOperations\LightCurves\Report\EventTimesReport.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\AdHocTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\BaseTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\FailedDistanceLogger.cs" />
