--- a/Tangra.OccultTools/Tangra.OccultTools.csproj
+++ b/Tangra.OccultTools/Tangra.OccultTools.csproj
@@ -100,7 +100,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)Tangra 3\bin\$(ConfigurationName)\Addins" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)Tangra 3\bin\$(ConfigurationName)\Addins\" /Y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
