Fixing a few bugs. Add-ins not loaded under .NET 4.0, Reset Configuration crashing, incorrect dialog buttons.

--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -49,4 +49,7 @@
                 contract="TangraService.TangraErrorSinkSoap" name="TangraErrorSinkSoap" />
         </client>
     </system.serviceModel>
+    <runtime>
+        <loadFromRemoteSources  enabled="true"/>
+    </runtime>
 </configuration>
