Added integration with OccultWatcher.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -395,6 +395,7 @@
     <Compile Include="VideoOperations\LightCurves\LightCurveReductionContext.cs" />
     <Compile Include="VideoOperations\LightCurves\Measurements\GroupMeasurer.cs" />
     <Compile Include="VideoOperations\LightCurves\ReduceLightCurveOperation.cs" />
+    <Compile Include="Helpers\OccultWatcherHelper.cs" />
     <Compile Include="VideoOperations\LightCurves\Report\EventTimesReport.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\AdHocTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\BaseTracker.cs" />
