--- a/Tangra.OccultTools/Tangra.OccultTools.csproj
+++ b/Tangra.OccultTools/Tangra.OccultTools.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -69,6 +69,7 @@
       <DependentUpon>frmConfig.cs</DependentUpon>
     </Compile>
     <Compile Include="OccultUtilitiesWrapper.cs" />
+    <Compile Include="OccultWatcherHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
